[package]
name = "appdirfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.11.1"
env_logger = "0.10.0"
argh = "0.1.9"
libc = "0.2.137"
byteorder = "1.4.3"
anyhow = { version = "1.0.66", features = ["backtrace"] }
